--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReadRover</string>
+    <string name="create_acct"> 유효한 이메일과 최소 6글자 이상의 비밀번호를 입력해주세요. </string>
 </resources>
