feat: 책 삭제 기능 구현
-ReaderBookUpdateScreen에 삭제 버튼 추가
-책 삭제 다이얼로그 표시 및 기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ReadRover</string>
+    <string name="sure"> 정말로 이 책을 삭제하시겠습니까?</string>
+    <string name="action"> 이후에 복구될 수 없습니다.</string>
     <string name="create_acct"> 유효한 이메일과 최소 6글자 이상의 비밀번호를 입력해주세요. </string>
 </resources>
